<resources>
    <string name="facebook_app_id">1019311001749624</string>
    <string name="app_name" translatable="false">TestApp</string>
    <string name="tag_lifecycle">Lifecycle</string>
    <string name="no_connection_msg">No internet connection. Please try again.</string>
    <string name="refresh_msg">Refresh</string>
    <string name="waiting_for_network">Waiting for network…</string>
    <string name="profile">Profile</string>
    <string name="markets">Markets</string>
    <string name="account">Account</string>
    <string name="trades">Trades</string>
    <string name="no_active_orders">No Orders</string>
    <string name="cancel_underline"><u>Cancel</u></string>
    <string name="active_orders">My Orders</string>
    <string name="order_history">My Trades</string>
    <string name="no_orders">No Orders</string>
    <string name="market">Market</string>
    <string name="wrong_divisible">The amount should be divisible by %s</string>
    <string name="empty_order_history">No Trades</string>
    <string name="order_cancelled_msg">Order cancelled</string>
    <string name="second_step_instruction"><![CDATA[Go to Settings -> API Keys]]></string>
    <string name="third_step_instruction">Click \'\'New API key button\'\'</string>
    <string name="fourth_step_instruction">For the new key you just created, turn all four access rights checkboxes on. Some checkboxes will require email confirmation. You need all 4 checkboxes activated in order to use this app.</string>
    <string name="fifth_step_instruction">After all checkboxes are \'\'on\'\', you can copy both keys (secret key will be sent to your email).</string>
    <string name="date_formatter_pattern">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="p_request">Next you should scan QR Code \nwith Secret key. You can find it in \nyour E-Mail.</string>
    <string name="withdrawals_for_this_currency_are_offline"><![CDATA[Withdrawals for this currency are offline.<br><br><br>Please refer to the <font color="#52A3CC">System Monitor</font> <br>page for updates.]]></string>
    <string name="notifications_channel" translatable="false">notification_channel</string>
    <string name="pin_request">Set up PIN code</string>
    <string name="pin_repeat">Repeat PIN code</string>
    <string name="pin_common">Enter PIN code</string>
    <string name="pin_old">Enter your current PIN code</string>
    <string name="search">Search</string>
    <string name="api_keys_request">Enter API keys</string>
    <string name="how_get_keys_for_login">How do I get keys for login?</string>
    <string name="public_key_hint">API key</string>
    <string name="private_key_hint">Secret key</string>
    <string name="confirm">Confirm</string>
    <string name="login_via_qr">Login via QR code</string>
    <string name="scan_qr_code">Scan QR Code to login</string>
    <string name="payment_history">History</string>
    <string name="estimated_value">BALANCE</string>
    <string name="deposit">Deposit</string>
    <string name="deposits">Deposits</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraws">Withdrawals</string>
    <string name="transfers">Transfers</string>
    <string name="hide_zero_balances">Hide zero balances</string>
    <string name="currency">Currency</string>
    <string name="main">Main</string>
    <string name="trading">Trading</string>
    <string name="balance">Balance</string>
    <string name="main_account">Main account</string>
    <string name="trading_account">Trading account</string>
    <string name="in_orders">On orders</string>
    <string name="estimated_btc">Estimated BTC</string>
    <string name="estimated_usd">Estimated USD</string>
    <string name="history">History</string>
    <string name="payment_id">Payment ID</string>
    <string name="copy_address">Copy address</string>
    <string name="copy_payment_id">Copy payment id</string>
    <string name="create_new">Create new</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="deposits_for_this_currency_are_offline">Deposits for this currency are offline</string>
    <string name="executed">Executed</string>
    <string name="how_to_getkeys_for_login"><![CDATA[<u>How do I get keys for login?</u>]]></string>
    <string name="loading">Loading…</string>
    <string name="new_notification">New Notification!</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">%s copied to clipboard</string>
    <string name="destination_tag">DestinationTag</string>
    <string name="address_copied">Address copied to clipboard</string>
    <string name="deposit_address">Deposit address</string>
    <string name="depth">Depth</string>
    <string name="pair_removed_from_favorites">Pair removed from favorites</string>
    <string name="pair_added_to_favorites">Pair added to favorites</string>
    <string name="line">Line</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="volume">Volume</string>
    <string name="available_short">Avbl</string>
    <string name="new_ordr_id">New Order ID</string>
    <string name="min_amount_is">Minimum amount is</string>
    <string name="cancel_order_question">Cancel order?</string>
    <string name="dismiss">Dismiss</string>
    <string name="wrong_qr_message">Wrong QR Code, please try another one</string>
    <string name="wrong_qr_currency_message">This is not adress for %s, please try another one</string>
    <string name="wrong_qr_short">Wrong QR Code</string>
    <string name="something_wrong">Something went wrong, please try again later</string>
    <string name="retry">Retry</string>
    <string name="withdrawal_complete">Withdrawal complete</string>
    <string name="transaction_id_copied">transaction id copied into clipboard</string>
    <string name="access_denied">Access denied</string>
    <string name="activate_api_keys_mesage">Please activate full access for your API keys. Your need to turn on all access checkboxes</string>
    <string name="disable_pin_message">Disable PIN?</string>
    <string name="continie_question">Continue?</string>
    <string name="ping_change_title">PIN changing</string>
    <string name="depost_address">Deposit Address</string>
    <string name="addres_from_qr">Fill address from QR-code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="no_history">No History</string>
    <string name="go_to_trading">Go To Trading</string>
    <string name="price_level">Price level</string>
    <string name="pin_tries_over">Allowed only 3 tries per minute\n\n %d seconds left</string>
    <string name="login_expected">Please log in to view orders</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="cannot_upload">Cannot upload data</string>
    <string name="fill_withdrawal">Please fill withdrawal address</string>
    <string name="valid_range">Please select a valid data range</string>
    <string name="can_change_in_settings">You can change it in settings</string>
    <string name="get_deposit_err">Error: cannot get deposit address</string>
    <string name="transaction_prohibited">Transaction prohibited</string>
    <string name="balance_forbidden">Balance is forbidden for this API key</string>
    <string name="notification">Notification</string>
    <string name="waiting_for_connection">Offline. Waiting for connection...</string>
    <string name="market_time">Market/Time</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="stop_price">Stop Price</string>
    <string name="total">Total</string>
    <string name="fee">Fee</string>
    <string name="address">Address</string>
    <string name="no_symbol_selected">No symbol selected</string>
    <string name="order_book">Order Book</string>
    <string name="times_amp_sales"><![CDATA[Time & Sales]]></string>
    <string name="select_currency">Select currency</string>
    <string name="order_filter">Order Filter</string>
    <string name="date">Date</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="_3_months">3 months</string>
    <string name="pair">Pair</string>
    <string name="type">Type</string>
    <string name="buy_and_sell">Buy and sell</string>
    <string name="reset">reset</string>
    <string name="accept">Accept</string>
    <string name="accept_eng">Accept</string>
    <string name="my_trades_detail">My trades detail</string>
    <string name="total_cost">Total Cost</string>
    <string name="time">Time</string>
    <string name="please_input_keywords">Please input keywords</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="name">Name</string>
    <string name="_24h_chg">24h Chg%</string>
    <string name="about_and_licenses">About and licenses</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="build_version">Build version</string>
    <string name="price_caps">PRICE</string>
    <string name="amount_caps">AMOUNT</string>
    <string name="eth_deposit_adress">ETH Deposit address</string>
    <string name="select_lang">Select language</string>
    <string name="log_out">Log out</string>
    <string name="support">Support</string>
    <string name="languages">Languages</string>
    <string name="pin">PIN</string>
    <string name="pin_enabled">PIN enabled</string>
    <string name="favorites">Favorites</string>
    <string name="rebate">Rebate</string>
    <string name="search_currency">Search currency</string>
    <string name="unknown">Unknown</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="failed">Failed</string>
    <string name="confirmed">Confirmed</string>
    <string name="available">Available</string>
    <string name="you_will_receive">You will receive</string>
    <string name="transfer">Transfer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="indicators">Indicators</string>
    <string name="select">Select</string>
    <string name="select_period">Select period</string>
    <string name="top_indicators">Top</string>
    <string name="bottom_indicators">Bottom</string>
    <string name="save">Save</string>
    <string name="group_by_price">Group by price</string>
    <string name="search_currency_pair">Search currency pair</string>
    <string name="change">Change</string>
    <string name="last_price">Last price</string>
    <string name="settings">Settings</string>
    <string name="success">Success</string>
    <string name="share">Share</string>
    <string name="reports">Reports</string>
    <string name="home">Home</string>
    <string name="exchange">Exchange</string>
    <string name="orders">Orders</string>
    <string name="terms_of_use_underlined"><u>Terms of Use</u></string>
    <string name="log_in_using_your_google_account_to_enter_the_application">Log in using your Google account \nto enter the application</string>
    <string name="privacy_policy_and_disclaimer_underlined"><u>Privacy Policy and Disclaimer</u></string>
    <string name="trade_on_all_currency_pairs_with_no_restrictions">Want more pairs than BTC/USD and have access to stock trading?</string>
    <string name="subscribtion_terms">Subscribtion terms:\n\nBy subscribing to a monthly payment, the user gets full access to trade with all currency pairs available in the application. The monthly subscription cost is %s</string>
    <string name="privacy_policy_underlined"><u>Privacy policy</u></string>
    <string name="try_subscribtions_button">TRY FOR FREE</string>
    <string name="days_trial">7 days trial then %s per month</string>
    <string name="premium_subscribe">Premium Subscription</string>
</resources>